# SPONGE2.0

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  pixi.toml  ruff.toml  run_gmx_vs_sponge.slurm
.github/workflows/: benchmark.yaml  package.yml  release.yml
SPONGE/: common.cpp  common.h  control.cpp  control.h  glibc_compat.cpp  main.cpp  main.h
SPONGE/Domain_decomposition/: Domain_decomposition.cpp  Domain_decomposition.h
SPONGE/Lennard_Jones_force/: LJ_soft_core.cpp  Lennard_Jones_force.cpp  Lennard_Jones_force.h  solvent_LJ.cpp  solvent_LJ.h
SPONGE/MD_core/: MD_core.cpp  mol.hpp
SPONGE/PM_force/: FGM_Double_Layer.cpp  FGM_Double_Layer.h  PM_force.cpp  PM_force.h
SPONGE/bias/: sinkmeta.cpp  sinkmeta.h
SPONGE/constrain/: constrain.cpp
SPONGE/manybody/reaxff/: bond.h  bond_order.cpp  eeq.cpp  reaxff.cpp  reaxff.h
SPONGE/nbnxm/: README.md  nbnxm_builder.cpp  nbnxm_builder.h  nbnxm_builder_compare.cpp  nbnxm_compare.cpp  nbnxm_compare.h  nbnxm_exclusions.cpp  nbnxm_exclusions.h  nbnxm_fixture.cpp  nbnxm_fixture.h  nbnxm_force_dump.cpp  nbnxm_force_dump.h  nbnxm_live_builder_input.cpp  nbnxm_live_builder_input.h  nbnxm_pairlist_layout.h  nbnxm_pairlist_types.cpp  nbnxm_pairlist_types.h  nbnxm_stage.cpp  nbnxm_stage.h  nbnxm_stage_compare.cpp
SPONGE/neighbor_list/: neighbor_list.cpp
SPONGE/quantum_chemistry/: quantum_chemistry.h  quantum_chemistry_dft.cpp  quantum_chemistry_init.cpp  quantum_chemistry_matrix.cpp  quantum_chemistry_scf.cpp
SPONGE/utils/: sad.hpp
cmake/math/: open_source.cmake
cmake/parallel/: none.cmake
cmake/targets/: SPONGE.cmake
cmake/utils/: version.cmake
conda/: build_package.py
docs/: build-guide.md  getting-started.md
docs/input-reference/: README.md  advanced.md  barostat.md  collective-variables.md  constraint.md  core.md  enhanced-sampling.md  io.md  neighbor-list.md  pme.md  restrain.md  sinkmeta.md  thermostat.md
docs/performance/: LJ_acc_plan.md
packaging/: conda.py
packaging/docker/: cpu-arm64.Dockerfile  cpu-x64.Dockerfile  cuda12-x64.Dockerfile  cuda13-x64.Dockerfile
packaging/windows/: installer.nsi  installer.ps1  license.rtf
plugins/prips/: CMakeLists.txt  pyproject.toml
plugins/prips/prips/: __init__.py
plugins/prips/src/: main.cpp
scripts/: generate_qc_basis_header.py  pre-commit  sync-version.py
skills/sponge-benchmark-creator/: SKILL.md
skills/sponge-build-guide/: SKILL.md
skills/sponge-code-style/: SKILL.md
skills/sponge-toml-input/: SKILL.md
(+166 files in other folders)
